APB-288 bugfix long search list, added wrap div to show scrollbar inside search list dialogue, making long profile bio responsive and smaller text

--- a/apps/app1/css/app.css
+++ b/apps/app1/css/app.css
@@ -141,10 +141,6 @@ body.font_arabic_nastaliq #user_menu_default_avatar{
 #profile_main_btn_cloud{
 	height: 20px;
 }
-#profile_info_search{
-	width: 100%;
-	position:fixed !important;
-}
 #dialogue_user_edit_content #user_edit_btn_user_delete_account
 {
 	display: inline-block;
@@ -936,7 +932,7 @@ border-left: 12px solid var(--app_theme_sun_color);
 .new_password_input{
 	border: 1px solid var(--app_theme_input_border_color);
 }
-#profile_search_list{
+#profile_search_list_wrap{
 	border: 1px solid var(--app_theme_input_border_color);
 	background-color: var(--app_theme_dialogue_background_color);	
 }
